initial ping check and modify manual page title

--- a/app/views/home/manual.html.erb
+++ b/app/views/home/manual.html.erb
@@ -1,4 +1,5 @@
 <!-- Index section 03 -->
+<% provide(:title, "메뉴얼") %>
 <div id="home03">
 	<div class="container">
 		<div id="mm-index-step-title" class="row">
